--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ title: "Salon Beauty by Echika"
 params:
   author: Beauty by Echika
   email : info@beautybyechika.nl
-  tel: 0850608912
+  tel: +0850608912
   address:  'Luringstraat 10 <br>
    9591BD Onstwedde'
   timings:
