--- a/config.yaml
+++ b/config.yaml
@@ -7,8 +7,7 @@ params:
   author: Beauty by Echika
   email : info@beautybyechika.nl
   tel: +0850608912
-  address:  'Luringstraat 10 <br>
-   9591BD Onstwedde'
+  address:  'Beauty by Echika<br>Luringstraat 10<br>9591BD Onstwedde<br>Nederland'
   timings:
     - day:  Maandag
       time: 10:00-17:00
